[lihui] #N/A refactor: fix code smell